# youtube-api

./: .gitignore  LICENSE  README.md
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: get.rs  main.rs  utils.rs
ui/: index.html  main.js  package-lock.json  package.json  styles.css  tailwind.config.js
ui/src/: index.html  main.js  output.css
